--- a/ch_04/01.html
+++ b/ch_04/01.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
-<html>
-    <head></head>
-    <body>
-        Hello,world!!!
-    </body>
+<head>
+  <meta charset="utf-8">
+  <title>網站標題</title>
+  <style type="'text/css">
+      h1{font-size: 30px; color: rgb(74, 255, 246);}
+  </style>
+    <script src="./01.js"></script>
+    <script>
+      alert("這是一個對話視窗")
+    </script>
+</head>
+<body>
+  <header>
+
+    <h1>Hello,World</h1>
+
+  </header>
+
+  <main>
+  </main>
+
+  <footer>
+  </footer>
+
+</body>
 </html>
