--- a/ch_04/01.html
+++ b/ch_04/01.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <title>網站標題</title>
-  <style type="'text/css">
-      h1{font-size: 30px; color: rgb(74, 255, 246);}
-  </style>
-    <script src="./01.js"></script>
-    <script>
-      alert("這是一個對話視窗")
-    </script>
-</head>
-<body>
-  <header>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>網站標題</title>
+    <style type="text/css">
+        h1 {font-size: 30px; color: blue;}
+    </style>
+      <script src="./01.js"></script>
+      <script>
+        alert("這是一個對話視窗")
+      </script>
+  </head>
+  <body>
+    <header>
 
-    <h1>Hello,World</h1>
+      <h1>Hello,World</h1>
 
-  </header>
+    </header>
 
-  <main>
-  </main>
+    <main>
+    </main>
 
-  <footer>
-  </footer>
+    <footer>
+    </footer>
 
-</body>
+  </body>
 </html>
