--- a/ch_04/feedback.html
+++ b/ch_04/feedback.html
@@ -20,13 +20,13 @@
 
     <label>問題分類：</label><br>
     <select name="category">
-      <option value="website">網站問題</option>
-      <option value="product">委託問題</option>
-      <option value="other">其他</option>
+      <option value="website"></option>
+      <option value="product"></option>
+      <option value="other"></option>
     </select><br><br>
 
-    <button type="submit">提交</button>
-    <button type="reset">重設</button>
+    <button type="submit"></button>
+    <button type="reset"></button>
   </form>
 </body>
 </html>
