--- a/ch_08/01.html
+++ b/ch_08/01.html
@@ -5,12 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>陳俊諺 期末作業</title>
   <link rel="stylesheet" href="../css/bootstrap.min.css">
+
+  <style>
+    body {
+      padding-top: 56px;
+    }
+    section {
+      padding: 80px 0;
+      text-align: center;
+    }
+  </style>
 </head>
+
 <body>
 
-<!-- 導覽列 -->
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">我的作品集網站</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
@@ -27,105 +37,30 @@
   </nav>
 </header>
 
-<!-- 主內容 -->
 <main>
 
-  <!-- 主視覺 -->
-  <section class="py-5 bg-light">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-6 mb-4 mb-lg-0">
-          <div class="border rounded bg-white p-5 text-center">
-            圖片區塊（個人照片）
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <h1 class="display-6">陳俊諺</h1>
-          <p class="lead">個人簡介</p>
-        </div>
-      </div>
-    </div>
+  <section>
+    <h1 class="display-5">陳俊諺</h1>
+    <p class="lead">個人簡介</p>
   </section>
 
-  <!-- 作品介紹 -->
-  <section id="about" class="py-5">
-    <div class="container">
-      <div class="text-center mb-4">
-        <h2 class="fw-bold">作品介紹</h2>
-        <p class="text-muted">作品名稱和簡介</p>
-      </div>
-      <div class="row g-4">
-
-        <!-- 作品 1 -->
-        <div class="col-md-6">
-          <div class="p-4 border rounded h-100">
-            <div class="mb-3 border rounded bg-light text-center py-5">
-              作品圖片
-            </div>
-            <h5>作品一</h5>
-            <p class="text-muted">作品名稱與簡介</p>
-          </div>
-        </div>
-
-        <!-- 作品 2 -->
-        <div class="col-md-6">
-          <div class="p-4 border rounded h-100">
-            <div class="mb-3 border rounded bg-light text-center py-5">
-              作品圖片
-            </div>
-            <h5>作品二</h5>
-            <p class="text-muted">作品名稱與簡介</p>
-          </div>
-        </div>
-
-      </div>
-    </div>
+  <section id="about">
+    <h2 class="fw-bold">作品介紹</h2>
+    <h4 class="mt-4">作品一</h4>
+    <h4 class="mt-3">作品二</h4>
   </section>
-
-  <!-- 消息內容 -->
-  <section id="news" class="py-5 bg-light">
-    <div class="container">
-      <div class="row g-4">
-        <div class="col-lg-8">
-          <div class="card mb-3">
-            <div class="card-body">
-              <h5 class="card-title">作品更新預告</h5>
-              <p class="card-text text-muted">內容</p>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">委託資料</h5>
-              <p class="card-text text-muted">內容</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- 外部連結 -->
-        <div class="col-lg-4">
-          <div class="p-4 bg-white border rounded h-100">
-            <h4 class="fw-bold">外部鏈接</h4>
-
-            <div class="border rounded bg-light text-center py-5 mb-3">
-              QR Code 圖片
-            </div>
-
-            <p class="text-muted">掃描二維碼前往相關平台</p>
-          </div>
-        </div>
-
-      </div>
-    </div>
+  <section id="news">
+    <h2 class="fw-bold">消息</h2>
+    <h4 class="mt-4">作品更新預告</h4>
+    <h4 class="mt-3">委託資料</h4>
+    <h4 class="mt-5">外部鏈接</h4>
   </section>
 
 </main>
 
-<!-- 頁尾 -->
-<footer class="bg-dark text-white py-4">
-  <div class="container text-center">
-    <p class="mb-1">&copy; 陳俊諺期末作業</p>
-    <small class="text-muted">網頁設計期末作業</small>
-  </div>
+<footer class="bg-dark text-white py-4 text-center">
+  <p class="mb-1">&copy; 陳俊諺期末作業</p>
+  <small class="text-muted">網頁設計期末作業</small>
 </footer>
 
 <script src="../js/bootstrap.bundle.min.js"></script>
