--- a/ch_08/02.html
+++ b/ch_08/02.html
@@ -36,7 +36,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 mb-4 mb-lg-0">
           <div class="border rounded bg-white p-5 text-center">
-            圖片區塊（個人照片）
+             <img src="ch_08/_DSC4946.jpg" width="300" style="float: right">
           </div>
         </div>
         <div class="col-lg-6">
