--- a/ch_08/02.html
+++ b/ch_08/02.html
@@ -34,15 +34,25 @@
   <section class="py-5 bg-light">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-6 mb-4 mb-lg-0">
-          <div class="border rounded bg-white p-5 text-center">
-             <img src="ch_08/_DSC4946.jpg" >
+
+        <!-- 照片 -->
+        <div class="col-lg-6 mb-4 mb-lg-0 text-center">
+          <div class="border rounded bg-white p-4">
+            <!-- 只要改檔名即可 -->
+            <img 
+              src="../images/profile.jpg"
+              class="img-fluid rounded"
+              alt="個人照片"
+            >
           </div>
         </div>
+
+        <!-- 文字 -->
         <div class="col-lg-6">
           <h1 class="display-6">陳俊諺</h1>
           <p class="lead">個人簡介</p>
         </div>
+
       </div>
     </div>
   </section>
@@ -54,14 +64,17 @@
         <h2 class="fw-bold">作品介紹</h2>
         <p class="text-muted">作品名稱和簡介</p>
       </div>
+
       <div class="row g-4">
 
         <!-- 作品 1 -->
         <div class="col-md-6">
           <div class="p-4 border rounded h-100">
-            <div class="mb-3 border rounded bg-light text-center py-5">
-              作品圖片
-            </div>
+            <img 
+              src="../images/work1.jpg"
+              class="img-fluid rounded mb-3"
+              alt="作品一圖片"
+            >
             <h5>作品一</h5>
             <p class="text-muted">作品名稱與簡介</p>
           </div>
@@ -70,9 +83,11 @@
         <!-- 作品 2 -->
         <div class="col-md-6">
           <div class="p-4 border rounded h-100">
-            <div class="mb-3 border rounded bg-light text-center py-5">
-              作品圖片
-            </div>
+            <img 
+              src="../images/work2.jpg"
+              class="img-fluid rounded mb-3"
+              alt="作品二圖片"
+            >
             <h5>作品二</h5>
             <p class="text-muted">作品名稱與簡介</p>
           </div>
@@ -86,6 +101,7 @@
   <section id="news" class="py-5 bg-light">
     <div class="container">
       <div class="row g-4">
+
         <div class="col-lg-8">
           <div class="card mb-3">
             <div class="card-body">
@@ -93,6 +109,7 @@
               <p class="card-text text-muted">內容</p>
             </div>
           </div>
+
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">委託資料</h5>
@@ -106,9 +123,11 @@
           <div class="p-4 bg-white border rounded h-100">
             <h4 class="fw-bold">外部鏈接</h4>
 
-            <div class="border rounded bg-light text-center py-5 mb-3">
-              QR Code 圖片
-            </div>
+            <img 
+              src="../images/qrcode.png"
+              class="img-fluid rounded mb-3"
+              alt="QR Code"
+            >
 
             <p class="text-muted">掃描二維碼前往相關平台</p>
           </div>
