--- a/ch_08/02.html
+++ b/ch_08/02.html
@@ -40,7 +40,7 @@
           <div class="border rounded bg-white p-4">
             <!-- 只要改檔名即可 -->
             <img 
-              src="../images/profile.jpg"
+              src="ch_08/images/profile.jpg"
               class="img-fluid rounded"
               alt="個人照片"
             >
@@ -71,7 +71,7 @@
         <div class="col-md-6">
           <div class="p-4 border rounded h-100">
             <img 
-              src="../images/work1.jpg"
+              src="ch_08/images/work1.jpg"
               class="img-fluid rounded mb-3"
               alt="作品一圖片"
             >
@@ -84,7 +84,7 @@
         <div class="col-md-6">
           <div class="p-4 border rounded h-100">
             <img 
-              src="../images/work2.jpg"
+              src="ch_08/images/work2.jpg"
               class="img-fluid rounded mb-3"
               alt="作品二圖片"
             >
@@ -124,7 +124,7 @@
             <h4 class="fw-bold">外部鏈接</h4>
 
             <img 
-              src="../images/qrcode.png"
+              src="ch_08/images/qrcode.png"
               class="img-fluid rounded mb-3"
               alt="QR Code"
             >
