--- a/ch_08/02.html
+++ b/ch_08/02.html
@@ -40,7 +40,7 @@
           <div class="border rounded bg-white p-4">
             <!-- 只要改檔名即可 -->
             <img 
-              src="ch_08/images/profile.jpg"
+              src="images/profile.jpg"
               class="img-fluid rounded"
               alt="個人照片"
             >
@@ -50,7 +50,7 @@
         <!-- 文字 -->
         <div class="col-lg-6">
           <h1 class="display-6">陳俊諺</h1>
-          <p class="lead">個人簡介</p>
+          <p class="lead">台中科技大學多媒體設計系，興趣是繪畫與看動畫</p>
         </div>
 
       </div>
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="text-center mb-4">
         <h2 class="fw-bold">作品介紹</h2>
-        <p class="text-muted">作品名稱和簡介</p>
+        <p class="text-muted">電繪作品</p>
       </div>
 
       <div class="row g-4">
@@ -71,12 +71,12 @@
         <div class="col-md-6">
           <div class="p-4 border rounded h-100">
             <img 
-              src="ch_08/images/work1.jpg"
+              src="images/work1.png"
               class="img-fluid rounded mb-3"
               alt="作品一圖片"
             >
             <h5>作品一</h5>
-            <p class="text-muted">作品名稱與簡介</p>
+            <p class="text-muted">作品以舞台感構圖呈現角色的多面性，結合天使羽翼、音樂元素與星光特效，塑造夢幻而溫柔的世界。畫面中不同姿態與表情彼此呼應，象徵歌聲、回憶與情感的累積與傳承。整體色調浪漫細膩，傳達陪伴、祝福與邁向未來的希望。</p>
           </div>
         </div>
 
@@ -84,12 +84,12 @@
         <div class="col-md-6">
           <div class="p-4 border rounded h-100">
             <img 
-              src="ch_08/images/work2.jpg"
+              src="images/work2.jpg"
               class="img-fluid rounded mb-3"
               alt="作品二圖片"
             >
             <h5>作品二</h5>
-            <p class="text-muted">作品名稱與簡介</p>
+            <p class="text-muted">畫面以高速動態與冷色能量為核心，主角在前衝的瞬間揮舞武器，藍色光效劃破空間，帶出果斷與勇氣。身後多重角色剪影象徵不同階段的成長與羈絆，將戰鬥的不安、信念與守護交織在同一畫面中，營造出充滿張力與情感推進的敘事氛圍。</p>
           </div>
         </div>
 
@@ -105,15 +105,15 @@
         <div class="col-lg-8">
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title">作品更新預告</h5>
-              <p class="card-text text-muted">內容</p>
+              <h5 class="card-title">平台</h5>
+              <p class="card-text text-muted">x：zero021019      ig：zero9_aerwork</p>
             </div>
           </div>
 
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">委託資料</h5>
-              <p class="card-text text-muted">內容</p>
+              <p class="card-text text-muted">接案內容-Q版全身  Q版半身  正比頭像  正比半身  正比全身（不含背景）  正比全身（含背景） </p>
             </div>
           </div>
         </div>
@@ -124,7 +124,7 @@
             <h4 class="fw-bold">外部鏈接</h4>
 
             <img 
-              src="ch_08/images/qrcode.png"
+              src="images/qrcode.png"
               class="img-fluid rounded mb-3"
               alt="QR Code"
             >
